src/main/default/objects/CVMA_Legal_Resource__mdt/CVMA_Legal_Resource__mdt.object-meta.xml
<CustomObject>
    <description>Legal clinics and advocacy services for CVMA veterans</description>
    <label>CVMA Legal Resource</label>
    <pluralLabel>CVMA Legal Resources</pluralLabel>
</CustomObject>