src/main/default/objects/CVMA_Legal_Resource__mdt/fields/Eligibility_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Requirements__c</fullName>
    <label>Eligibility Requirements</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>