src/main/default/objects/CVMA_Legal_Resource__mdt/fields/Pro_Bono_Available__c.field-meta.xml
<CustomField>
    <fullName>Pro_Bono_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pro Bono Available</label>
    <type>Checkbox</type>
</CustomField>