src/main/default/objects/CVMA_Legal_Resource__mdt/fields/Resource_Type__c.field-meta.xml
<CustomField>
    <fullName>Resource_Type__c</fullName>
    <label>Resource Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>